# fuzzy-pso-wing-design

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
api/: __init__.py  main.py  schemas.py
app/: dashboard.py
docs/: AI_USAGE_DECLARATION.md  PORTAO_B_PLANO_IMPLEMENTACAO.md  base_de_regras.md  funcoes_pertinencia.md  manual_execucao.md
experiments/configs/: default.yaml
notebooks/: fuzzy_pso_apresentacao.ipynb
scripts/: gen_figures.py  make_report_assets.py  run_experiments.py
src/dfpo/: __init__.py  config.py
src/dfpo/baseline/: __init__.py  analytic.py
src/dfpo/experiments/: __init__.py  baselines.py  metrics.py  runner.py
src/dfpo/fuzzy/: __init__.py  fast_eval.py  inference.py  membership.py  rules.py  system.py  variables.py
src/dfpo/pso/: __init__.py  calibrate.py  operate.py  swarm.py
src/dfpo/reference/: __init__.py  target.py
src/dfpo/viz/: __init__.py  convergence.py  sensitivity.py  surface.py
tests/: test_baseline.py  test_fuzzy.py  test_pso.py
